# vynix

./: .codecov.yml  .coveragerc  .gitignore  .mcp.json  .pre-commit-config.yaml  .roomodes  404.html  AGENT.md  AGENTS.md  AREAS_OF_CONCERN_v0.16.0.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUICK_WIN_OPTIMIZATIONS.md  README.md  REFACTORING_COMPARISON_REPORT.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  setup.py  sitemap.xml
libs/khive/: CHANGELOG.md  pyproject.toml  ruff.toml
libs/khive/docs/: cli_architecture.md  getting_started.md  protocols.md
libs/khive/docs/commands/: khive_clean.md  khive_commit.md  khive_fmt.md  khive_info.md  khive_new_doc.md  khive_pr.md  khive_reader.md  khive_roo.md
libs/khive/docs/connections/: api_client.md  endpoint.md  endpoint_config.md  header_factory.md  match_endpoint.md  overview.md
libs/khive/docs/core-concepts/: async_queue.md  async_resource_management.md  resilience_patterns.md
libs/khive/docs/services/: info_service.md
libs/khive/src/khive/: __init__.py  config.py
libs/khive/tests/cli/: test_khive_clean.py  test_khive_cli.py  test_khive_commit.py  test_khive_fmt.py  test_khive_info.py  test_khive_init.py  test_khive_new_doc.py  test_khive_pr.py
libs/khive/tests/clients/: __init__.py  test_api_client.py  test_executor.py  test_executor_rate_limiting.py  test_executor_resource_cleanup.py  test_queue.py  test_rate_limiter.py  test_rate_limiter_integration.py  test_resilience.py
libs/khive/tests/connections/: test_endpoint_additional.py  test_endpoint_coverage.py  test_endpoint_coverage_additional.py  test_endpoint_resource_cleanup.py
libs/khive/tests/integration/: test_queue_integration.py  test_resilience_integration.py  test_resource_cleanup_integration.py
libs/khive/tests/services/: __init__.py
libs/pydapter/: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
libs/pydapter/docs/: ci.md  error_handling.md  getting_started.md  index.md  migration_guide.md  migrations.md  neo4j_adapter.md  postgres_adapter.md  protocols.md  qdrant_adapter.md  sql_model_adapter.md  testing.md
libs/pydapter/docs/api/: adapters.md  core.md  extras.md  migrations.md  protocols.md
libs/pydapter/docs/tutorials/: using_migrations.md  using_protocols.md
libs/pydapter/src/pydapter/: __init__.py  exceptions.py
libs/pydapter/tests/: .coverage  conftest.py  test_async_adapters.py  test_async_error_handling.py  test_async_migrations_registry.py  test_async_neo4j_adapter.py  test_async_neo4j_context_manager.py  test_async_postgres_adapter.py  test_async_postgres_adapter_extended.py  test_async_protocol.py  test_async_sql_adapter.py  test_async_sql_adapter_extended.py  test_async_weaviate_adapter.py  test_bench_json.py  test_benchmarks.py  test_core_adapters.py  test_db_error_handling.py  test_dependencies.py  test_enhanced_sql_model_adapter.py  test_error_handling.py  test_event_protocol.py  test_excel_adapter.py  test_integration_async_neo4j.py  test_integration_mongodb.py  test_integration_neo4j.py  test_integration_postgres.py  test_integration_qdrant.py  test_integration_weaviate.py  test_migrations_base.py  test_migrations_exceptions.py  test_migrations_integration.py  test_migrations_protocols.py  test_migrations_registry.py  test_migrations_registry_error_handling.py  test_migrations_sql_adapters.py  test_model_adapter_config.py  test_mongo_adapter.py  test_mongo_adapter_extended.py  test_neo4j_adapter.py  test_neo4j_adapter_extended.py  (+21 more)
libs/v1/: ARCHITECTURE.md  PEER_REVIEW_REQUEST.md  README.md  pyproject.toml
libs/v1/docs/proofs/: README.md
libs/v1/src/vynix/: __init__.py
libs/vynix/: .pre-commit-config.yaml  pyproject.toml  pytest.ini  ruff.toml
libs/vynix/.github/: ci.yml
libs/vynix/docs/: index.rst
libs/vynix/docs/design/: async_primitives.md  initial_design.md  observability.md  service_edits.md  service_executor.md  services_edits2.md  services_tdd.md
libs/vynix/docs/modules/: index.rst  lib_package.rst  models.rst  operative_step.rst
libs/vynix/docs/tutorials/: get_started_pt3.rst
libs/vynix/src/vynix/: __init__.py  _err.py  errors.py
libs/vynix/tests/: confest.py  conftest.py  test_json_utils.py  test_rights_wrappers_smoke.py
libs/vynix/tests/base/: test_binders.py  test_core_ops.py  test_eventbus.py  test_fork_inherits_live_rights.py  test_forms.py  test_graph.py  test_ipu.py  test_meaningful_coverage.py  test_policy.py  test_policy_live_rights.py  test_policy_wildcard.py  test_runner.py  test_types.py  test_types_capabilities.py
libs/vynix/tests/concurrency/: conftest.py  test_cancel.py  test_errors.py  test_patterns.py  test_taskgroup.py
libs/vynix/tests/forms/: test_compile.py  test_spec.py
libs/vynix/tests/services/: README.md  __init__.py  conftest.py  test_capability_model.py  test_circuit_breaker.py  test_claude_code_integration.py  test_cli_transport.py  test_core_primitives.py  test_critical_flaws.py  test_endpoint_models.py  test_error_mapping.py  test_executor_lifecycle.py  test_executor_rate_limiting.py  test_executor_reliability.py  test_hooks_core.py  test_hooks_integration.py  test_integration_core.py  test_mcp_transport.py  test_openai_service.py  test_policy_gate.py  (+6 more)
lion/lionag2/: .coveragerc  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
lion/lionag2/docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
lion/lionag2/tests/: __init__.py  test_main.py
vynix_v1/: LICENSE  Makefile  README.md  pyproject.toml
vynix_v1/docs/: redis_as_first_class_io.md
vynix_v1/examples/: __init__.py  basic.py  llm_morphism.py
vynix_v1/src/vynix_v1/: __init__.py
vynix_v1/tests/: test_eventbus_observations.py  test_forms.py  test_forms_edges.py  test_graph.py  test_graph_edges.py  test_ipu_invariants.py  test_policy.py  test_policy_conservative_wildcards.py  test_policy_coverage.py  test_registry.py  test_runner.py  test_runner_params_and_concurrency.py  test_serde_roundtrip.py
vynix_v1/tests/ops/: test_priority_a_ops.py
(+1850 files in other folders)
