[project]
name = "lionagi"
version = "0.12.5"
description = "An Intelligence Operating System."
authors = [
    { name = "HaiyangLi", email = "quantocean.li@gmail.com" },
    { name = "Liangbingyan Luo", email = "llby_luo@outlook.com" }   
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiocache>=0.12.0",
    "aiohttp>=3.12.0",
    "backoff>=2.2.1",
    "jinja2>=3.1.0",
    "pillow>=11.0.0",
    "pydantic-settings>=2.8.0",
    "pydapter[pandas]>=0.3.0",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.8.0",
    "toml>=0.9.0",
]
license = {file = "LICENSE"}
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Framework :: Pytest",
]

[dependency-groups]
dev = [
    "lionagi[lint, test, docs]",
    "ipython>=8.31.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "tqdm>=4.67.1",
    "pytest-cov>=6.1.1",
]

[project.optional-dependencies]

lint = [
    "black[jupyter]>=24.10.0",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
]

test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=1.0.0",
]

docs = [
    "sphinx-autobuild>=2024.10.3",
    "sphinx>=8.1.3",
    "furo>=2024.8.6",
]

reader = [
    "docling>=2.15.1",
]

tools = [
    "lionagi[reader]",
]

ollama = [
    "ollama>=0.5.0",
]

all = [
    "lionagi[reader]",
    "lionagi[ollama]",
]



[tool.black]
line-length = 79
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
ignore = ["E203", "W503", "E501", "E402"]
max-line-length = 79
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "performance: marks tests as performance",
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["lionagi"]
omit = [
    "lionagi/service/third_party/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lionagi"]

[tool.hatch.build]
exclude = [
    "dev/*",
    "data/*",
    "notebooks/*",
    "tests/*",
    "*.pyc",
    "__pycache__",
    "temp_logs/*",
    "logs/*"
]
