[project]
name            = "pydapter"
version         = "0.1.7"
description     = "Tiny trait + adapter toolkit for pydantic models"
readme          = "README.md"
requires-python = ">=3.10"
authors         = [{ name = "HaiyangLi", email = "quantocean.li@gmail.com" }]
dependencies = [
    "pydantic>=2.6",
    "toml>=0.10.0",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.1.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.14.0",
    "testcontainers[mongodb,postgres,qdrant, weaviate]>=3.7.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.7",
    "hypothesis>=6.131.9",
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.7.0",
    "mkdocs-autorefs>=0.5.0",
    "khive>=0.2.10",
    "mypy>=1.15.0",
    "types-toml>=0.10.8",
    "pandas-stubs>=2.2.3",
]

[project.optional-dependencies]

pandas    = ["pandas>=2.2"]
excel     = ["pandas>=2.2", "xlsxwriter>=3.2", "openpyxl>=3.1.5"]
sql       = ["sqlalchemy>=2.0"]
postgres  = ["sqlalchemy>=2.0", "psycopg[binary]>=3", "asyncpg>=0.29", "greenlet>=3.0.0", "psycopg2-binary>=2.9.10"]
pgvector  = ["pgvector>=0.4.1"]
mongo     = ["pymongo>=4.7"]
weaviate  = ["weaviate-client>=4.4", "weaviate>=0.1.2"]
neo4j     = ["neo4j>=5.19"]
motor     = ["motor>=3"]
qdrant    = ["qdrant-client>=1.14"]
aiohttp   = ["aiohttp>=3.11.10"]

migrations-core = []  # No additional dependencies beyond pydantic

migrations-sql = [
    "sqlalchemy>=2.0",
    "alembic>=1.11.0",
    "sqlalchemy[asyncio]>=2.0; python_version >= '3.7'",
]

# Combined dependencies
migrations = [
    "pydapter[migrations-core]",
    "pydapter[migrations-sql]",
]

# ----------------------------------
all = [
    "pandas>=2.2",
    "xlsxwriter>=3.2",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3",
    "asyncpg>=0.29",
    "greenlet>=3.0.0",
    "pymongo>=4.7",
    "weaviate-client>=4.4",
    "weaviate>=0.1.2",
    "neo4j>=5.19",
    "motor>=3",
    "qdrant-client>=1.14",
    "aiohttp>=3.11.10",
    "openpyxl>=3.1.5",
    "pgvector>=0.4.1",
    "alembic>=1.11.0",
    "sqlalchemy[asyncio]>=2.0; python_version >= '3.7'",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydapter"]

[tool.hatch.build]
exclude = [
    "dev/*",
    "data/*",
    "notebooks/*",
    "tests/*",
    "*.pyc",
    "__pycache__",
    "temp_logs/*",
    "logs/*"
]
